# ibus-unikey

./: .gitmodules  CMakeLists.txt  CONTRIBUTORS  MT-NOTES.md  README.md
cmake/: FindXGettext.cmake  Findspdlog.cmake  Utilities.cmake
docs/: build_unikey_in_linux.md
packaging/debian/: changelog  control  copyright  ibus-unikey.install  rules
po/: CMakeLists.txt  POTFILES.in  ibus-unikey.pot  vi.po
setup/: CMakeLists.txt  dlg_macro_table.cpp  dlg_main_setup.h  ibus-unikey.ui
src/: CMakeLists.txt  engine.cpp  engine_private.h  main.cpp  unikey.xml  unikey.xml.in
src/base/: logging.h  port.h
src/config/: org.freedesktop.ibus.engine.unikey.gschema.xml  unikey_config.h
src/data/gschema/: org.freedesktop.ibus.engine.unikey.gschema.xml
src/gui/setup_dialog/: dlg_macro_table.h  dlg_main_setup.cpp
src/unix/ibus/: engine.cpp  engine.h  engine_const.h  engine_private.h  main.cpp  unikey.xml.in  utils.cpp  utils.h
