CMAKE_MINIMUM_REQUIRED (VERSION 3.0.2 FATAL_ERROR)

PROJECT (ibus-unikey LANGUAGES CXX)

ADD_COMPILE_OPTIONS(-std=c++11 -Wall -Werror -g -O3 -pedantic -march=native -fPIC)

# ----- DEPENDENCIES ----- #
INCLUDE(GNUInstallDirs)

MESSAGE(STATUS "CMake module path: ${CMAKE_MODULE_PATH}")
FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(IBUS REQUIRED ibus-1.0)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(GTK2 REQUIRED
    COMPONENTS
    gtk
)

INCLUDE_DIRECTORIES(${IBUS_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR}/ukengine)
INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR}/src)

MESSAGE(STATUS "CMAKE_INSTALL_FULL_LIBEXECDIR: ${CMAKE_INSTALL_FULL_LIBEXECDIR}")
MESSAGE(STATUS "CMAKE_INSTALL_FULL_LOCALEDIR: ${CMAKE_INSTALL_FULL_LOCALEDIR}")
MESSAGE(STATUS "CMAKE_INSTALL_FULL_DATADIR: ${CMAKE_INSTALL_FULL_DATADIR}")
MESSAGE(STATUS "X11_LIBRARIES: ${X11_LIBRARIES}")
MESSAGE(STATUS "GTK2_INCLUDE_DIRS: ${GTK2_INCLUDE_DIRS}")
MESSAGE(STATUS "GTK2_LIBRARIES: ${GTK2_LIBRARIES}")

SET(PACKAGE_VERSION 0.6.2)
SET(PACKAGE_NAME ibus-unikey)
SET(LIBEXECDIR ${CMAKE_INSTALL_FULL_LIBEXECDIR}/${PACKAGE_NAME})
SET(LOCALEDIR ${CMAKE_INSTALL_FULL_LOCALEDIR}/${PACKAGE_NAME})
SET(PKGDATADIR ${CMAKE_INSTALL_FULL_DATADIR}/${PACKAGE_NAME})

CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/src/unikey.xml.in"
  "${PROJECT_SOURCE_DIR}/src/unikey.xml"
)


# ----- SOURCES ----- #

FILE(GLOB UKENGINE_SRC
  "ukengine/*.cpp"
)

FILE(GLOB IBUS_UNIKEY_ENGINE_SRC
  "src/*.cpp"
)

FILE(GLOB IBUS_UNIKEY_SETUP_SRC
  "setup/*.cpp"
  "src/utils.cpp"
)

# ------ LIBRARIES --------#

ADD_LIBRARY(libunikey-ibus STATIC ${UKENGINE_SRC})

TARGET_COMPILE_OPTIONS(libunikey-ibus
  PUBLIC -funsigned-char)

# ------ EXECUTABLES --------#

# ------ ibus-engine-unikey --------#
ADD_EXECUTABLE(ibus-engine-unikey ${IBUS_UNIKEY_ENGINE_SRC})

TARGET_LINK_LIBRARIES(ibus-engine-unikey
  libunikey-ibus
  ${IBUS_LIBRARIES}
  ${X11_LIBRARIES}
  Threads::Threads
)

TARGET_COMPILE_OPTIONS(ibus-engine-unikey
  PUBLIC -Wno-variadic-macros
)

TARGET_COMPILE_DEFINITIONS(ibus-engine-unikey
  PUBLIC LIBEXECDIR=\"${LIBEXECDIR}\"
  PUBLIC GETTEXT_PACKAGE=\"${PACKAGE_NAME}\"
  PUBLIC PACKAGE_STRING=\"${PACKAGE_NAME}\"
  PUBLIC LOCALEDIR=\"${LOCALEDIR}\"
  PUBLIC PACKAGE_VERSION=\"${PACKAGE_VERSION}\"
  PUBLIC PACKAGE_BUGREPORT="https://github.com/ibus-unikey/ibus-unikey"
  PUBLIC PACKAGE_NAME=\"${PACKAGE_NAME}\"
  PUBLIC PKGDATADIR=\"${PKGDATADIR}\"
)

# ------ ibus-setup-unikey --------#
ADD_EXECUTABLE(ibus-setup-unikey ${IBUS_UNIKEY_SETUP_SRC})

TARGET_LINK_LIBRARIES(ibus-setup-unikey
  libunikey-ibus
  ${IBUS_LIBRARIES}
  ${GTK2_LIBRARIES}
)

TARGET_COMPILE_OPTIONS(ibus-setup-unikey
  PUBLIC -Wno-variadic-macros
)

TARGET_COMPILE_DEFINITIONS(ibus-setup-unikey
  PUBLIC LIBEXECDIR=\"${LIBEXECDIR}\"
  PUBLIC PKGDATADIR=\"${PKGDATADIR}\"
  PUBLIC UI_DATA_DIR=\"${PKGDATADIR}/ui\"
  PUBLIC LOCALEDIR=\"${LOCALEDIR}\"
  PUBLIC GETTEXT_PACKAGE=\"${PACKAGE_NAME}\"
  PUBLIC PACKAGE_STRING=\"${PACKAGE_NAME}\"
  PUBLIC PACKAGE_VERSION=\"${PACKAGE_VERSION}\"
  PUBLIC PACKAGE_BUGREPORT="https://github.com/ibus-unikey/ibus-unikey"
  PUBLIC PACKAGE_NAME=\"${PACKAGE_NAME}\"
)
